--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<h1>Rock Paper Scissors</h1>
+	<h2 id='update'><h2>
 	<form id='form'>
 	  <div>
 	    <label for="player-name"></label>
@@ -24,5 +25,16 @@
 </body>
 <!-- Firebase Reference -->
 <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script>
+	var config = {
+	  apiKey: "AIzaSyDmkjCyThokV22fOMuDUGbwafvYB3bxCDg",
+	  authDomain: "rps-game-d1ec9.firebaseapp.com",
+	  databaseURL: "https://rps-game-d1ec9.firebaseio.com",
+	  storageBucket: "rps-game-d1ec9.appspot.com",
+	  messagingSenderId: "1058873558218"
+	};
+
+	firebase.initializeApp(config);
+</script>
 <script type="text/javascript" src="assets/app.js"></script>
 </html>
