work on RPS buttons

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<div id="game-stage" class="game-elem">Game Hasn't Started</div>
 		<div id="player2"><p id="player2-status" class="game-elem">Waiting for player 2</p></div>
 	</div>
+	<div id="game-controls"></div>
 </body>
 <!-- Firebase Reference -->
 <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
