work on displayRock function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 		<div id="game-stage" class="game-elem">Game Hasn't Started</div>
 		<div id="player2"><p id="player2-status" class="game-elem">Waiting for player 2</p></div>
 	</div>
-	<div id="game-controls"></div>
+	<div id="game-controls" style="display: none">
+		<button id='rock'>rock</button>
+		<button id='paper'>paper</button>
+		<button id='scissors'>scissors</button>
+	</div>
 </body>
 <!-- Firebase Reference -->
 <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
